github service has been introduced

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/github-viewer/app.js"></script>
+    <script src="js/github-viewer/controllers.js"></script>
+    <script src="js/github-viewer/services.js"></script>
 </head>
 
 
-<body ng-app="github_api">
+<body ng-app="githubViewer">
 
     <div class="header">
         <h1>GitHub Viewer</h1>
