--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <title>GitHub Viewer</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.js"></script>
+   
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/github-viewer/app.js"></script>
     <script src="js/github-viewer/controllers.js"></script>
     <script src="js/github-viewer/services.js"></script>
+    <script src="js/github-viewer/directives.js"></script>
 </head>
 
 
@@ -18,20 +21,11 @@
         <h1>GitHub Viewer</h1>
     </div>
 
-    <div ng-controller="user">
-        <div class="user-name-input">
-            <form ng-submit="search_user(username_to_search)">
-                <input type="search" placeholer="user name" required ng-model="username_to_search" />
-                <input type="submit" value="Search" />
-            </form>
-        </div>
+    <div>
+        
+        <div ng-view></div>
 
-        <div class="warning" ng-show="requests_remain">
-            <p>Requests remain: {{ requests_remain }}</p>
-        </div>
-
-        <div class="user-info" ng-include="'user_details.html'" ng-show="user">
-        </div>
+    </div>
 </body>
 
 </html>
