--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <h1>GitHub Viewer</h1>
     </div>
 
-    <div>
+    <div ng-controller="MainController">
         
         <div ng-view></div>
 
